Disable end print and cancel print macros because klipper does not really supports multiple overrides for macros

--- a/macros.cfg
+++ b/macros.cfg
@@ -113,15 +113,15 @@ gcode:
 	RESTORE_GCODE_STATE NAME=PAUSE_state MOVE=1 MOVE_SPEED={printer["gcode_macro RatOS"].macro_travel_speed|float}
 	RESUME_BASE
 
-[gcode_macro CANCEL_PRINT]
-description: Cancels the printer
-rename_existing: CANCEL_PRINT_BASE
-gcode:
-	END_PRINT
-	TURN_OFF_HEATERS
-	CLEAR_PAUSE
-	#SDCARD_RESET_FILE
-	CANCEL_PRINT_BASE
+#[gcode_macro CANCEL_PRINT]
+#description: Cancels the printer
+#rename_existing: CANCEL_PRINT_BASE
+#gcode:
+#	END_PRINT
+#	TURN_OFF_HEATERS
+#	CLEAR_PAUSE
+#	#SDCARD_RESET_FILE
+#	CANCEL_PRINT_BASE
 
 [gcode_macro PRIME_LINE]
 description: Prints a primeline, used internally, if configured, as part of the START_PRINT macro.
@@ -526,30 +526,30 @@ gcode:
 #####
 
 # The end_print macro is also called from CANCEL_PRINT.
-[gcode_macro END_PRINT]
-description: End print procedure, use this in your Slicer.
-gcode:
-	SAVE_GCODE_STATE NAME=end_print_state
-	_USER_END_PRINT_BEFORE_HEATERS_OFF
-	_END_PRINT_BEFORE_HEATERS_OFF
-	TURN_OFF_HEATERS
-	_USER_END_PRINT_AFTER_HEATERS_OFF
-	_END_PRINT_AFTER_HEATERS_OFF
-	_USER_END_PRINT_PARK
-	_END_PRINT_PARK
-	# Clear skew profile if any was loaded.
-	{% if printer["gcode_macro RatOS"].skew_profile is defined %}
-		SET_SKEW CLEAR=1
-	{% endif %}
-	# Steppers off
-	M84
-	# Part cooling fan off
-	M107
-	# Clear bed mesh so that G28 doesn't fail.
-	BED_MESH_CLEAR
-	M117 Done :)
-	RESPOND MSG="Done :)"
-	RESTORE_GCODE_STATE NAME=end_print_state
+#[gcode_macro END_PRINT]
+#description: End print procedure, use this in your Slicer.
+#gcode:
+#	SAVE_GCODE_STATE NAME=end_print_state
+#	_USER_END_PRINT_BEFORE_HEATERS_OFF
+#	_END_PRINT_BEFORE_HEATERS_OFF
+#	TURN_OFF_HEATERS
+#	_USER_END_PRINT_AFTER_HEATERS_OFF
+#	_END_PRINT_AFTER_HEATERS_OFF
+#	_USER_END_PRINT_PARK
+#	_END_PRINT_PARK
+#	# Clear skew profile if any was loaded.
+#	{% if printer["gcode_macro RatOS"].skew_profile is defined %}
+#		SET_SKEW CLEAR=1
+#	{% endif %}
+#	# Steppers off
+#	M84
+#	# Part cooling fan off
+#	M107
+#	# Clear bed mesh so that G28 doesn't fail.
+#	BED_MESH_CLEAR
+#	M117 Done :)
+#	RESPOND MSG="Done :)"
+#	RESTORE_GCODE_STATE NAME=end_print_state
 
 #####
 # END PRINT MACRO HOOKS
