Disable firmware retraction

--- a/hotends/revo.cfg
+++ b/hotends/revo.cfg
@@ -20,5 +20,5 @@ min_temp: 0
 max_temp: 285
 pressure_advance: 0.05
 
-[firmware_retraction]
-retract_length: 0.5
+#[firmware_retraction]
+#retract_length: 0.5
