--- a/extruders/orbiter.cfg
+++ b/extruders/orbiter.cfg
@@ -14,10 +14,10 @@ full_steps_per_rotation: 200
 filament_diameter: 1.750
 max_extrude_only_velocity: 60
 
-[firmware_retraction]
-retract_speed: 60
-unretract_extra_length: 0
-unretract_speed: 60
+#[firmware_retraction]
+#retract_speed: 60
+#unretract_extra_length: 0
+#unretract_speed: 60
 
 [tmc2209 extruder]
 run_current: 0.35
